--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,13 @@ php:
   - 5.4
   - hhvm
 script: phpunit Test.php
+
+addons:
+  sonarqube:
+    organization: "mybluej" # the key of the org you chose at step #3
+    token:
+      secure: 0f87891ba2bda43de13bad8b7f9f564d98ee981b
+script:
+  # other script steps might be done before running the actual SonarQube analysis
+  - sonar-scanner
+
